--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="text-gray-300">"super service de la part de skyrex merci"</p>
+                    <p class="text-gray-300">"super service de la part de faops merci"</p>
                 </div>
                 
                 <!-- Review 2 -->
@@ -505,7 +505,7 @@
             
             <div class="text-center mt-12">
                 <p class="text-gray-400 mb-4">Have more questions?</p>
-                <a href="https://discord.gg/" target="_blank" class="bg-purple-600 hover:bg-purple-700 px-8 py-3 rounded-full font-medium inline-flex items-center space-x-2 hover-scale">
+                <a href="https://discord.gg/E8CsyqEnGJ" target="_blank" class="bg-purple-600 hover:bg-purple-700 px-8 py-3 rounded-full font-medium inline-flex items-center space-x-2 hover-scale">
                     <i class="fas fa-comment-dots"></i>
                     <span>Open a Ticket on Discord</span>
                 </a>
