--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                     <a href="https://discord.gg/E8CsyqEnGJ" target="_blank" class="text-gray-400 hover:text-purple-400 text-xl">
                         <i class="fab fa-discord"></i>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-purple-400 text-xl">
+                    <a href="https://twitter.com/Phtmsrl" class="text-gray-400 hover:text-purple-400 text-xl">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </div>
